# SFML

./: .gitignore
flappyKorgi/: Road Map.docx
sfml/: abc.cpp  hello.cpp  hello_err.cpp  linear_equation.cpp  square_equation.cpp
sfml.1/: CMakeLists.txt
sfml.1/03/: main.cpp
sfml.1/04/: main.cpp
sfml.1/06/: main.cpp
sfml.2/00/: main.cpp
sfml.2/01/: main.cpp
sfml.2/02/: main.cpp
sfml.2/sfml2.1/: CMakeLists.txt  main.cpp
sfml.2/sfml2.2/: CMakeLists.txt  main.cpp
sfml.3/: CMakeLists.txt
sfml.3/sfml3.1/: main.cpp
sfml.4/: CMakeLists.txt
sfml.4/sfml4.1/: main.cpp
sfml.4/sfml4.3/: main.cpp
